--- a/page_replacement/replacement/templates/replacement/result.html
+++ b/page_replacement/replacement/templates/replacement/result.html
@@ -20,15 +20,10 @@
         </form> 
     </div>
 
-    <div style="text-align: center; font-size: large;">
-        <br>
-        There are no results yet. Try to input some info. For example:
-        <br>
-        Sequence: <code>1 2 3 4 5 6</code>
-        <br>
-        Frames: <code>4</code>
+    <div style="text-align: center;">
+        <h2>Result Block</h2>
+        <h3>Sequence: {{sequence}}</h3>
     </div>
-
     
 </body>
 </html>
