--- a/page_replacement/replacement/templates/replacement/result.html
+++ b/page_replacement/replacement/templates/replacement/result.html
@@ -28,6 +28,8 @@
 
     
     <h1 style="text-align: center;">Method 1: First In First Out (FIFO)</h1>
+    <h3 style="text-align: center;"><code style="color: green;">Green is the sequence</code></h3>
+    <h3 style="text-align: center;"><code style="color: red;">Red is the replaced value</code></h3>
     <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    
     <table style="margin: auto;font-size: 1.5em;font-weight: bolder;">
             {%comment%}
@@ -62,6 +64,8 @@
 
 
     <h1 style="text-align: center;">Method 2: Least Recently Used (LRU)</h1>
+    <h3 style="text-align: center;"><code style="color: green;">Green is the sequence</code></h3>
+    <h3 style="text-align: center;"><code style="color: red;">Red is the replaced value</code></h3>
     <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    
     <table style="margin: auto;font-size: 1.5em;font-weight: bolder;">
             
