added OPT headers in result page. commented out print debug in views

--- a/page_replacement/replacement/templates/replacement/result.html
+++ b/page_replacement/replacement/templates/replacement/result.html
@@ -79,6 +79,12 @@
         <h4>Page Faults: {{lrufault}}</h4>
         <h4>Hit Ratio: {{lruratio}}%</h4>
     </div>
+
+    <hr>
+    <h1 style="text-align: center;">Method 3: Optimal Page Replacement (OPT)</h1>
+    <h3 style="text-align: center;"><code style="color: green;">Green is the sequence</code></h3>
+    <h3 style="text-align: center;"><code style="color: red;">Red is the replaced value</code></h3>
+    <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    
     
 </body>
 </html>
