almost final. some decorations added to the site

--- a/page_replacement/replacement/templates/replacement/layout.html
+++ b/page_replacement/replacement/templates/replacement/layout.html
@@ -1,25 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Replacement</title>
+    <style>
+        .resultblock{
+            display: block; 
+            margin-top: 1.33em; 
+            margin-bottom: 1.33em; 
+            margin-left: 0; 
+            margin-right: 0; 
+            font-weight: bold;
+            font-size: 1.17em;
+        }        
+        #hits{
+            color: #04aa6d;
+        }
+        #misses{
+            color:#f44336
+        }
+        #ratio{
+            color:rgb(0, 0, 0)
+        }
+        table,tr,td{
+            border: 1px solid black
+        }
+        hr{
+            border: 5% solid black;
+        }
+    </style>
+
+
+
+    <title>Page Replacement Algorithm</title>
 </head>
-<body>
+<body style="font-family: 'Roboto Mono', monospace;">
+    <script>
+        AOS.init();
+    </script>
+    
+    <div class="container">
 
-    <h1 style="text-align: center;">Page Replacement Algorithm Visualization</h1>
+    
 
-    <div style="text-align: center; font-size: large;">
+    <h1 style="text-align: center; margin-top: 5%;"><a href="{% url 'index' %}" style="text-decoration: none;">Page Replacement Algorithm Visualization</a></h1>
+        <hr>
+    <div style=" font-size: large;">
 
         <form action="{% url 'result' %}" method="POST">
             {% csrf_token %}
+            {%comment%}
             {{ form }}
-            <input type="submit">
+            {%endcomment%}
+            <div class="form-row" style="text-align: center;">
+                <div class="form-group col">
+                    <label for="seq">Sequence</label>
+                    <input type="text" name="seq" id="seq" class="form-control" placeholder="ex. 7 0 1 2 0 3 0 4 2 3 0 3 2 1 2 0 1 7 0 1" style="width: 50%; margin: auto;" required>
+                </div>
+                
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col" style="text-align: center;">
+                    <label for="fsize">Frame Size</label>
+                    <input type="text" name="fsize" id="fsize" class="form-control" placeholder="ex. 3" style="width: 9%; margin: auto; text-align: center;" required>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col" style="text-align: center;">
+                    <input type="submit" class="btn btn-primary">
+                </div>
+            </div>
+
+            
+            
 
         </form> 
     </div>
+        
+    </div>
+
+    <div>
+        <hr>
+        {% block result %}
+        {% endblock %}
+    </div>
 
 
+    
 </body>
+
+<footer style="font-family: 'Roboto Mono', monospace;margin-top: 200px;">
+    <hr>
+    CSS225: Operating System Final Project <br>
+    Semester 2/2020
+</footer>
 </html>
