--- a/page_replacement/replacement/templates/replacement/result.html
+++ b/page_replacement/replacement/templates/replacement/result.html
@@ -1,107 +1,112 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page Replacement</title>
-</head>
-<body>
+{% extends "replacement/layout.html" %}
 
-    <h1 style="text-align: center;">Page Replacement Algorithm Visualization</h1>
 
-    <div style="text-align: center; font-size: large;">
-
-        <form action="{% url 'result' %}" method="POST">
-            {% csrf_token %}
-            {{ form }}
-            <input type="submit">
-
-        </form> 
-    </div>
-
-    <div style="text-align: center;">
-        <h1>Results</h1>
-        <h1>Sequence: {% for s in sequence %} {{s}} {%endfor%}</h1>
-        <h1>Number of frames: {{frameAmount}}</h1>
+    {% block result %}
+    <script>
+        AOS.init();
+    </script>
+    <div data-aos="fade-right" data-aos-duration="200"style="text-align: center;">
+        <h1 data-aos="fade-right" data-aos-duration="500">Results</h1>
+        <h2 data-aos="fade-right" data-aos-duration="800">Sequence: {% for s in sequence %} {{s}} {%endfor%}</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1100">Frame Size: {{frameAmount}}</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1400">Number of References: {{length}}</h2>
+        <h3 data-aos="fade-right" data-aos-duration="1700" style="text-align: center;"><code style="color: #0066cc;">Blue is the sequence</code></h3>
+        <h3 data-aos="fade-right" data-aos-duration="2000" style="text-align: center;"><code style="color: #f44336;">Red is the replaced value</code></h3>
+        
     </div>
 
     
+    <hr>
+    <div data-aos="fade-up" data-aos-duration="2000">
     <h1 style="text-align: center;">Method 1: First In First Out (FIFO)</h1>
-    <h3 style="text-align: center;"><code style="color: green;">Green is the sequence</code></h3>
-    <h3 style="text-align: center;"><code style="color: red;">Red is the replaced value</code></h3>
-    <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    
-    <table style="margin: auto;font-size: 1.5em;font-weight: bolder;">
-            {%comment%}
-            {{ finalstr }}
-            {%endcomment%}
+    <br>   
 
-            {%comment%}
-            {% for list in finalList %}
-            <tr>
-            {% for attr in list %}
-            <td style="padding: 7px;">{{ attr }}</td>
-            {% endfor %}
-            </tr>
-            {% endfor %}
-            {%endcomment%}
-
-
+    <!-- <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    -->
+    <table style="margin: auto; font-size: 1.5em;font-weight: bolder;">
+        <tr>
+        {% for s in sequence %} 
+               
+        <td style="padding: 13px; color: #0066cc;">            
+            {{s}}            
+        </td>
+        {% endfor %}
+        </tr>
+    </table>
+    <table style="margin: auto;font-size: 1.5em;font-weight: bolder;">         
             <div style="text-align: center;">
                 {{ fifomdstring | safe }}
             </div>        
      </table>
-     <div style="text-align: center;">
-        <h4>Number of References: {{length}}</h4>
-        <h4>Number of Hits: {{fifohit}}</h4>
-        <h4>Page Faults: {{fifofault}}</h4>
-        <h4>Hit Rate: {{fiforatio}}%</h4>
+     <div class="resultblock" style="text-align: center;" >
+        
+        <p id="hits">Number of Hits: {{fifohit}}</p>
+        <p id="misses">Page Faults: {{fifofault}}</p>
+        <p id="ratio">Hit Rate: {{fiforatio}}%</p>
     </div>
-
+    
+</div>
 
 
 
 <hr>
 
-    <h1 style="text-align: center;">Method 2: Least Recently Used (LRU)</h1>
-    <h3 style="text-align: center;"><code style="color: green;">Green is the sequence</code></h3>
-    <h3 style="text-align: center;"><code style="color: red;">Red is the replaced value</code></h3>
-    <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    
-    <table style="margin: auto;font-size: 1.5em;font-weight: bolder;">
+ 
+
+    
+    <h1 data-aos="fade-up" style="text-align: center;">Method 2: Least Recently Used (LRU)</h1>
+    <br>
+    <table data-aos="fade-up" style="margin: auto; font-size: 1.5em;font-weight: bolder;">
+        <tr>
+        {% for s in sequence %} 
+               
+        <td style="padding: 13px; color: #0066cc;">            
+            {{s}}            
+        </td>
+        {% endfor %}
+        </tr>
+    </table>
+    <table data-aos="fade-up" style="margin: auto;font-size: 1.5em;font-weight: bolder;">
             
             <div style="text-align: center;">
                 {{ lrumdstring | safe }}
             </div>        
      </table>
-     <div style="text-align: center;">
-        <h4>Number of References: {{length}}</h4>
-        <h4>Number of Hits: {{lruhit}}</h4>
-        <h4>Page Faults: {{lrufault}}</h4>
-        <h4>Hit Rate: {{lruratio}}%</h4>
+     <div data-aos="fade-up" class="resultblock" style="text-align: center;" >
+        <p id="hits">Number of Hits: {{lruhit}}</p>
+        <p id="misses">Page Faults: {{lrufault}}</p>
+        <p id="ratio">Hit Rate: {{lruratio}}%</p>
     </div>
 
 
 
     <hr>
-    <h1 style="text-align: center;">Method 3: Optimal Page Replacement (OPT)</h1>
-    <h3 style="text-align: center;"><code style="color: green;">Green is the sequence</code></h3>
-    <h3 style="text-align: center;"><code style="color: red;">Red is the replaced value</code></h3>
-    <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    
+    <h1 data-aos="fade-up" style="text-align: center;">Method 3: Optimal Page Replacement (OPT)</h1>
+    <br>
+    <table data-aos="fade-up" style="margin: auto; font-size: 1.5em;font-weight: bolder;">
+        <tr>
+        {% for s in sequence %} 
+               
+        <td style="padding: 13px; color: #0066cc;">            
+            {{s}}            
+        </td>
+        {% endfor %}
+        </tr>
+    </table>   
 
 
 
-    <table style="margin: auto;font-size: 1.5em;font-weight: bolder;">
+    <table data-aos="fade-up" style="margin: auto;font-size: 1.5em;font-weight: bolder;">
             
-        <div style="text-align: center;">
+        <div data-aos="fade-up" style="text-align: center;">
             {{ optmdstring | safe }}
         </div>        
  </table>
- <div style="text-align: center;">
-    <h4>Number of References: {{length}}</h4>
-    <h4>Number of Hits: {{opthit}}</h4>
-    <h4>Page Faults: {{optfault}}</h4>
-    <h4>Hit Rate: {{optratio}}%</h4>
+ <div data-aos="fade-up" class="resultblock" style="text-align: center;" >
+ 
+    <p id="hits">Number of Hits: {{opthit}}</p>
+    <p id="misses">Page Faults: {{optfault}}</p>
+    <p id="ratio">Hit Rate: {{optratio}}%</p>
+  
 </div>
     <hr>
-</body>
-</html>
+    {% endblock %}
