added footers info

--- a/page_replacement/replacement/templates/replacement/index.html
+++ b/page_replacement/replacement/templates/replacement/index.html
@@ -5,7 +5,7 @@
         {% block result %}
         
 
-        <h3 data-aos="fade-up" style="text-align: center;font-weight: bold;">How the Algorithms Works</h3>
+        <h3 data-aos="fade-right" style="text-align: center;font-weight: bold;">How the Algorithms Works</h3>
         <div class="container" data-aos="fade-up">
         <p>
             <br>
