--- a/page_replacement/replacement/templates/replacement/layout.html
+++ b/page_replacement/replacement/templates/replacement/layout.html
@@ -101,7 +101,9 @@
 
 <footer style="font-family: 'Roboto Mono', monospace;margin-top: 200px;">
     <hr>
-    CSS225: Operating System Final Project <br>
+    CSS225: Operating System Final Project by Nutchanon Charnwutiwong, Worapas Pruktipinyopap, Veerawich Kaoaien<br>
     Semester 2/2020
+    <br>
+    <span>&#169;nutchanon_c</span>
 </footer>
 </html>
