--- a/page_replacement/replacement/templates/replacement/result.html
+++ b/page_replacement/replacement/templates/replacement/result.html
@@ -2,6 +2,9 @@
 
 
     {% block result %}
+
+
+
     <script>
         AOS.init();
     </script>
@@ -17,15 +20,14 @@
 
     
     <hr>
-    <div data-aos="fade-up" data-aos-duration="2000">
+    <div data-aos="fade-right" data-aos-duration="2000">
     <h1 style="text-align: center;">Method 1: First In First Out (FIFO)</h1>
     <br>   
 
     <!-- <h2 style="text-align: center;">{% for s in sequence %} <span style="margin: 5px;color: green;">{{s}}</span> {% endfor %}</h2>    -->
     <table style="margin: auto; font-size: 1.5em;font-weight: bolder;">
         <tr>
-        {% for s in sequence %} 
-               
+        {% for s in sequence %}                
         <td style="padding: 13px; color: #0066cc;">            
             {{s}}            
         </td>
@@ -53,9 +55,9 @@
  
 
     
-    <h1 data-aos="fade-up" style="text-align: center;">Method 2: Least Recently Used (LRU)</h1>
+    <h1 data-aos="fade-right" style="text-align: center;">Method 2: Least Recently Used (LRU)</h1>
     <br>
-    <table data-aos="fade-up" style="margin: auto; font-size: 1.5em;font-weight: bolder;">
+    <table data-aos="fade-right" style="margin: auto; font-size: 1.5em;font-weight: bolder;">
         <tr>
         {% for s in sequence %} 
                
@@ -65,13 +67,13 @@
         {% endfor %}
         </tr>
     </table>
-    <table data-aos="fade-up" style="margin: auto;font-size: 1.5em;font-weight: bolder;">
+    <table data-aos="fade-right" style="margin: auto;font-size: 1.5em;font-weight: bolder;">
             
             <div style="text-align: center;">
                 {{ lrumdstring | safe }}
             </div>        
      </table>
-     <div data-aos="fade-up" class="resultblock" style="text-align: center;" >
+     <div data-aos="fade-right" class="resultblock" style="text-align: center;" >
         <p id="hits">Number of Hits: {{lruhit}}</p>
         <p id="misses">Page Faults: {{lrufault}}</p>
         <p id="ratio">Hit Rate: {{lruratio}}%</p>
@@ -80,9 +82,9 @@
 
 
     <hr>
-    <h1 data-aos="fade-up" style="text-align: center;">Method 3: Optimal Page Replacement (OPT)</h1>
+    <h1 data-aos="fade-right" style="text-align: center;">Method 3: Optimal Page Replacement (OPT)</h1>
     <br>
-    <table data-aos="fade-up" style="margin: auto; font-size: 1.5em;font-weight: bolder;">
+    <table data-aos="fade-right" style="margin: auto; font-size: 1.5em;font-weight: bolder;">
         <tr>
         {% for s in sequence %} 
                
@@ -95,13 +97,13 @@
 
 
 
-    <table data-aos="fade-up" style="margin: auto;font-size: 1.5em;font-weight: bolder;">
+    <table data-aos="fade-right" style="margin: auto;font-size: 1.5em;font-weight: bolder;">
             
-        <div data-aos="fade-up" style="text-align: center;">
+        <div data-aos="fade-right" style="text-align: center;">
             {{ optmdstring | safe }}
         </div>        
  </table>
- <div data-aos="fade-up" class="resultblock" style="text-align: center;" >
+ <div data-aos="fade-right" class="resultblock" style="text-align: center;" >
  
     <p id="hits">Number of Hits: {{opthit}}</p>
     <p id="misses">Page Faults: {{optfault}}</p>
@@ -109,4 +111,5 @@
   
 </div>
     <hr>
+
     {% endblock %}
