changed table coloring

--- a/page_replacement/replacement/templates/replacement/layout.html
+++ b/page_replacement/replacement/templates/replacement/layout.html
@@ -62,7 +62,7 @@
             {%endcomment%}
             <div class="form-row" style="text-align: center;">
                 <div class="form-group col">
-                    <label for="seq">Sequence</label>
+                    <label for="seq">Reference String</label>
                     <input type="text" name="seq" id="seq" class="form-control" placeholder="ex. 7 0 1 2 0 3 0 4 2 3 0 3 2 1 2 0 1 7 0 1" style="width: 50%; margin: auto;" required>
                 </div>
                 
