--- a/page_replacement/replacement/templates/replacement/result.html
+++ b/page_replacement/replacement/templates/replacement/result.html
@@ -14,7 +14,7 @@
         <h2 data-aos="fade-right" data-aos-duration="1100">Frame Size: {{frameAmount}}</h2>
         <h2 data-aos="fade-right" data-aos-duration="1400">Number of References: {{length}}</h2>
         <h3 data-aos="fade-right" data-aos-duration="1700" style="text-align: center;"><code style="color: #0066cc;">Blue is the sequence</code></h3>
-        <h3 data-aos="fade-right" data-aos-duration="2000" style="text-align: center;"><code style="color: #f44336;">Red is the replaced value</code></h3>
+        <h3 data-aos="fade-right" data-aos-duration="2000" style="text-align: center;"><code style="color: #f44336;">Red is the replaced value when page fault occurs</code></h3>
         
     </div>
 
