hyperlink to github

--- a/page_replacement/replacement/templates/replacement/layout.html
+++ b/page_replacement/replacement/templates/replacement/layout.html
@@ -104,6 +104,6 @@
     SIIT CSS225: Operating System Final Project by Nutchanon Charnwutiwong, Worapas Pruktipinyopap, Veerawich Kaoaien<br>
     Semester 2/2020
     <br>
-    <span>&#169;nutchanon_c</span>
+    <span>&#169;<a href="https://github.com/nutchanon-c">nutchanon_c</a></span>
 </footer>
 </html>
