--- a/page_replacement/replacement/templates/replacement/layout.html
+++ b/page_replacement/replacement/templates/replacement/layout.html
@@ -99,7 +99,7 @@
     
 </body>
 
-<footer style="font-family: 'Roboto Mono', monospace;margin-top: 200px;">
+<footer style="font-family: 'Roboto Mono', monospace;margin-top: 50px; margin-left: 5px;margin-bottom: 10px;">
     <hr>
     SIIT CSS225: Operating System Final Project by Nutchanon Charnwutiwong, Worapas Pruktipinyopap, Veerawich Kaoaien<br>
     Semester 2/2020
