--- a/page_replacement/replacement/templates/replacement/result.html
+++ b/page_replacement/replacement/templates/replacement/result.html
@@ -28,7 +28,7 @@
     <table style="margin: auto; font-size: 1.5em;font-weight: bolder;">
         <tr>
         {% for s in sequence %}                
-        <td style="padding: 13px; color: #0066cc;">            
+        <td style="padding: 20px; color: #0066cc;text-align: center; ">            
             {{s}}            
         </td>
         {% endfor %}
@@ -61,7 +61,7 @@
         <tr>
         {% for s in sequence %} 
                
-        <td style="padding: 13px; color: #0066cc;">            
+        <td style="padding: 20px; color: #0066cc;text-align: center;">            
             {{s}}            
         </td>
         {% endfor %}
@@ -88,7 +88,7 @@
         <tr>
         {% for s in sequence %} 
                
-        <td style="padding: 13px; color: #0066cc;">            
+        <td style="padding: 20px; color: #0066cc; text-align: center;">            
             {{s}}            
         </td>
         {% endfor %}
