--- a/replacement/templates/replacement/layout.html
+++ b/replacement/templates/replacement/layout.html
@@ -31,7 +31,7 @@
             color:rgb(0, 0, 0)
         }
         table,tr,td{
-            border: 1px solid black
+            border: 1px solid black;
         }
         hr{
             border: 5% solid black;
@@ -51,7 +51,7 @@
 
     
 
-    <h1 style="text-align: center; margin-top: 5%;"><a href="{% url 'index' %}" style="text-decoration: none;">Page Replacement Algorithm Visualization</a></h1>
+    <h1 style="text-align: center; margin-top: 4%;"><a href="{% url 'index' %}" style="text-decoration: none;">Page Replacement Algorithm Visualization</a></h1>
         <hr>
     <div style=" font-size: large;">
 
