fixed table sizing

--- a/replacement/templates/replacement/layout.html
+++ b/replacement/templates/replacement/layout.html
@@ -32,6 +32,9 @@
         }
         table,tr,td{
             border: 1px solid black;
+            width: 80px;
+            table-layout: fixed;
+            
         }
         hr{
             border: 5% solid black;
