--- a/replacement/templates/replacement/layout.html
+++ b/replacement/templates/replacement/layout.html
@@ -104,7 +104,7 @@
 
 <footer style="font-family: 'Roboto Mono', monospace;margin-top: 50px; margin-left: 5px;margin-bottom: 10px;">
     <hr>
-    SIIT CSS225: Operating System Final Project by Nutchanon Charnwutiwong, Worapas Pruktipinyopap, Veerawich Kaoaien<br>
+    <a href="https://www.siit.tu.ac.th/" target="_blank">SIIT</a> CSS225: Operating System Final Project by Nutchanon Charnwutiwong, Worapas Pruktipinyopap, Veerawich Kaoaien<br>
     Semester 2/2020
     <br>
     <span>&#169;<a href="https://github.com/nutchanon-c" target="_blank">nutchanon-c</a></span>
